[project]
name = "mindfulness-dashboard"
author = "MiragonMx"
version = "0.1.0"
license = "MIT"
license-files = ["LICEN[CS]E.*", "libraries/licenses/*.txt"]
description = 'Mindfullness Dashboard - Visualization for "Ein guter Plan" app data'
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bokeh>=3.8.2",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.19",
]
